--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,10 +7,12 @@
 }
 
 body {
-  background-color: #e4f0cd;
+  background-color: var(--back-color);
   text-align: center;
-  font-family: "Poppins", sans-serif;
-  margin-bottom: 270px;
+}
+.hero {
+  background-color: var(--main-color);
+  padding-bottom: 270px;
 }
 h1 {
   font-family: "Playfair Display";
@@ -45,6 +47,7 @@ p {
   padding-right: 30px;
   color: var(--back-color);
   margin-bottom: 270px;
+  margin: 10px auto;
 }
 nav {
   background-color: #e4f0cd;
@@ -60,4 +63,54 @@ nav {
 
 .active {
   color: var(--secondary-color);
+}
+h3 {
+  font-family: "Playfair Display";
+  font-weight: 700;
+  font-size: 64px;
+  color: var(--maintext-color);
+  text-align: center;
+}
+.about {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  color: var(--text-color);
+  text-align: start;
+  font-style: normal;
+  margin-top: 54px;
+}
+img {
+  border-radius: 2px;
+  width: 560px;
+  height: 560px;
+}
+.title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
+  line-height: 27px;
+  margin-top: 127px;
+  margin-bottom: 80px;
+}
+.project-button {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: center;
+  display: inline-block;
+  color: var(--secondary-color);
+  border-radius: 4px;
+  border: 2px solid #f283b6;
+  padding: 18px 30px;
+  text-align: center;
+  width: 200px;
+}
+.col {
+  text-align: start;
+}
+.row {
+  margin-top: 60px;
 }
