--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -82,7 +82,7 @@ h3 {
   margin-top: 54px;
 }
 img {
-  border-radius: 2px;
+  border-radius: 4px;
   width: 560px;
   height: 560px;
 }
@@ -113,4 +113,32 @@ img {
 }
 .row {
   margin-top: 60px;
+}
+.projects-button {
+  color: var(--back-color);
+  text-align: center;
+  background-color: var(--secondary-color);
+  border-radius: 4px;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.about-info {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 27px;
+  color: var(--text-color);
+  margin-top: 0;
+  text-align: left;
+}
+.about {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  color: var(--text-color);
+  margin-top: 28px;
+  margin-bottom: 48px;
 }
