--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -83,8 +83,6 @@ h3 {
 }
 img {
   border-radius: 4px;
-  width: 560px;
-  height: 560px;
 }
 .title {
   font-family: "Poppins", sans-serif;
@@ -107,12 +105,6 @@ img {
   padding: 18px 30px;
   text-align: center;
   width: 200px;
-}
-.col {
-  text-align: start;
-}
-.row {
-  margin-top: 60px;
 }
 .projects-button {
   color: var(--back-color);
@@ -141,4 +133,25 @@ img {
   color: var(--text-color);
   margin-top: 28px;
   margin-bottom: 48px;
+}
+.work-heading {
+  color: var(--maintext-color);
+  font-family: "Playfair Display";
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 85px;
+  text-align: start;
+  max-width: 825px;
+  margin-left: 140px;
+  margin-top: 150px;
+}
+work-name {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  text-align: center;
+  color: var(--maintext-color);
+  margin-top: 16px;
+  margin-bottom: 9px;
 }
