--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,150 +8,77 @@
 
 body {
   background-color: var(--back-color);
-  text-align: center;
 }
 .hero {
   background-color: var(--main-color);
-  padding-bottom: 270px;
+  text-align: center;
+  padding: 160px 20px;
 }
 h1 {
   font-family: "Playfair Display";
   font-weight: 700;
   font-size: 96px;
-  text-align: center;
   color: var(--maintext-color);
-  margin-bottom: 36px;
+  line-height: 1.5;
 }
 h2 {
+  font-size: 64px;
+  font-family: "Playfair Display";
+  font-weight: 700;
+  font-size: 64px;
+  color: var(--maintext-color);
+}
+p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+}
+.hero h2 {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-size: 36px;
-  text-align: center;
   color: var(--text-color);
-  margin-top: 194px;
+  margin: 0;
 }
-p {
+.hero p {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 24px;
-  text-align: center;
   color: var(--text-color);
-  margin-bottom: 36px;
+  line-height: 2;
 }
-.main-button {
-  background-color: var(--secondary-color);
+.btn-branding {
+  background: var(--secondary-color);
   border-radius: 4px;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  padding-left: 30px;
-  padding-right: 30px;
   color: var(--back-color);
-  margin-bottom: 270px;
-  margin: 10px auto;
-}
-nav {
-  background-color: #e4f0cd;
-  color: var(--text-color);
-  text-decoration: none;
-}
-.navbar-brand {
-  color: var(--secondary-color);
-}
-.nav-link {
-  color: var(--text-color);
-}
-
-.active {
-  color: var(--secondary-color);
-}
-h3 {
-  font-family: "Playfair Display";
-  font-weight: 700;
-  font-size: 64px;
-  color: var(--maintext-color);
-  text-align: center;
-}
-.about {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 30px;
-  color: var(--text-color);
-  text-align: start;
-  font-style: normal;
-  margin-top: 54px;
-}
-img {
-  border-radius: 4px;
-}
-.title {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  text-align: center;
-  line-height: 27px;
-  margin-top: 127px;
-  margin-bottom: 80px;
-}
-.project-button {
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  text-align: center;
-  display: inline-block;
-  color: var(--secondary-color);
-  border-radius: 4px;
-  border: 2px solid #f283b6;
-  padding: 18px 30px;
-  text-align: center;
-  width: 200px;
-}
-.projects-button {
-  color: var(--back-color);
-  text-align: center;
-  background-color: var(--secondary-color);
-  border-radius: 4px;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  padding-left: 30px;
-  padding-right: 30px;
-}
-.about-info {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
   font-size: 18px;
   line-height: 27px;
-  color: var(--text-color);
-  margin-top: 0;
-  text-align: left;
+  padding: 15px 30px;
 }
-.about {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 30px;
-  color: var(--text-color);
-  margin-top: 28px;
-  margin-bottom: 48px;
+.btn-brandin-outline {
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
-.work-heading {
-  color: var(--maintext-color);
-  font-family: "Playfair Display";
-  font-weight: 700;
-  font-size: 64px;
-  line-height: 85px;
-  text-align: start;
-  max-width: 825px;
-  margin-left: 140px;
-  margin-top: 150px;
+.project-description {
+  padding: 120px 60px;
 }
-work-name {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 36px;
-  text-align: center;
-  color: var(--maintext-color);
-  margin-top: 16px;
-  margin-bottom: 9px;
+@media (max-width: 900px) {
+  h1 {
+    font-size: 44px;
+    line-height: 2;
+  }
+  h2 {
+    font-size: 44px;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
