Added css to about page
Removed navbar and fixed css for about page.

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -47,6 +47,20 @@ p {
   color: var(--text-color);
   line-height: 2;
 }
+.about-section {
+  padding: 160px 20px;
+}
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-section h2 {
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
+}
+.about-section-content {
+  margin: 30px;
+}
 .btn-branding {
   background: var(--secondary-color);
   border-radius: 4px;
@@ -77,8 +91,15 @@ p {
   .hero {
     padding: 80px 20px;
   }
+  .about-section {
+    text-align: center;
+    padding: 0;
+  }
   .project-description {
     padding: 0;
     text-align: center;
   }
+}
+img {
+  border-radius: 4px;
 }
